# QuickApply

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  README.zh-CN.md  docker-compose.yml  main.py  pyproject.toml
.codex/skills/resume-tailor/: README.md  revision_advice.md  session_send.md
app/: __init__.py  asset_retriever.py  config.py  fetcher.py  location_utils.py  main.py  models.py  profile_rules.py  resume_profile.py  scheduler.py  scoring.py  service.py  storage.py  tailor_service.py  time_utils.py
config/: codex_tailor_result.schema.json  proxies.example.txt  search_profiles.yaml
docs/: README.md  README.zh-CN.md  configuration.md  configuration.zh-CN.md  deployment.md  deployment.zh-CN.md  getting-started.md  getting-started.zh-CN.md  tailor.md  tailor.zh-CN.md  workflows.md  workflows.zh-CN.md
examples/resumes/: alex_morgan_comp_chem.tex  alex_morgan_general.tex  alex_morgan_materials_ml.tex  alex_morgan_protein_ml.tex  taylor_brooks_account_management.tex  taylor_brooks_customer_success.tex  taylor_brooks_general.tex  taylor_brooks_growth_marketing.tex
examples/templates/: cv_template.tex
scripts/: dev.sh  docker-entrypoint.sh  run.sh  seed_demo_data.py
static/: i18n.js  style.css
templates/: application_tracker.html  base.html  crawler.html  crawler_run_detail.html  dashboard.html  index.html  job_detail.html  job_preview.html  jobs.html  tailor_skill_detail.html  tailor_tasks.html
tests/: conftest.py  test_asset_retriever.py  test_config_tailor.py  test_fetcher.py  test_routes.py  test_scoring.py
